2011-09-23 Roman
- FIX:DAQ.ModBus: Write EVAL to writible attribute on time error writing to remote device.
- FIX:DAQ: Get value by time from all archives by function get{S|R|B|I}() is fixed for archives process not only buffer.


2011-09-20 Roman
- FIX:UI.QTCfg: Crash on page items change after error connect to disconnected remote station.
- FIX:UI.Vision: Select group widgets by mouse window on development is fixed.


2011-09-18 Roman
- !:DAQ.JavaLikeCalc, Special.FLibComplex1, Special.FLibMath, Special.FLibSYS:
    Direct librarie's functions dynamic call is added, by: SYS.DAQ.JavaLikeCalc["lib_{Lib}"].funcId(prms, ...).


2011-09-15 Roman
- UI.VCAEngine: The "user" field of session object is set to resourced string for possible crash prevent on multiply
    connections to single session.


2011-09-14 Roman
- DAQ.SNMP: Check for USM_PRIV_PROTO_AES allow is added for build with NetSNMP version 5.1 and early.


2011-09-13 Roman
- FIX:Archive.FSArch: Fast set bits calc algoritm using for align to dwords (32 bits) memory buffer's blocks is fixed.


2011-09-12 Roman
- UI.Vision: ScrollArea is added to project's and item's main tab of properties for work on N800.
    Default size to project's and item's properties window is set 800x600.
- Archive: Send time label is made for archive's values table for display local time on remote station.
- !!:FIX:Archive.FSArch: Store "double" value into LE format on ARM is fixed.
    Use function TSYS::getUnalign32() for get dwords to fast calc value offset algorithm to prevent errors on ARM.
    Codepage width into Plain messages archive is expanded to 99 symbols, from 9.
- FIX:DAQ.OPC_UA: Input request counter is fixed for OPC UA protocol.
- FIX:Transport.SSL, Transport.Serial: Return negative result is prevented for output transport messIO() function.
    Take place on multiply connections to serial devices.


2011-09-09 Roman
- FIX:DAQ.ModBus: Regular expression is fixed for sintax higlight to register address pair.