@@ -259,13 +259,13 @@ bool ShapeFormEl::attrSet( WdgView *w, int uiPrmPos, const string &val )
 	    switch( shD->welType )
 	    {
 		case 0:
-		    if( !((LineEdit*)shD->addrWdg)->isEdited( ) ) ((LineEdit*)shD->addrWdg)->setValue(val.c_str());
+		    if(!((LineEdit*)shD->addrWdg)->isEdited()) ((LineEdit*)shD->addrWdg)->setValue(val.c_str());
 		    break;
 		case 1:	((TextEdit*)shD->addrWdg)->setText(val.c_str());	break;
 		case 2:	((QCheckBox*)shD->addrWdg)->setChecked(atoi(val.c_str()));	break;
 		case 3:	((QPushButton*)shD->addrWdg)->setChecked(atoi(val.c_str()));	break;
 		case 4:
-		    if( ((QComboBox*)shD->addrWdg)->findText(val.c_str()) < 0 ) ((QComboBox*)shD->addrWdg)->addItem(val.c_str());
+		    if(((QComboBox*)shD->addrWdg)->findText(val.c_str()) < 0) ((QComboBox*)shD->addrWdg)->addItem(val.c_str());
 			((QComboBox*)shD->addrWdg)->setCurrentIndex(((QComboBox*)shD->addrWdg)->findText(val.c_str()));
 		    break;
 		case 5:
